# geometrically-constrained-mnist

./: README.md  alm.py  data_loader.py  eval.py  final_params.npy  geometry.py  partition.npz  pyproject.toml  train.py  verify_uniformity.py  visualize.py
jax_nn_mnist_constrained_weights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
